5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1749_3095.log
== TEST (2019-05-15 19:31:59) 
-- CODE:
E = int(input("qual a quantidade de empates?")
V = int(input("qual a quantidade de vitorias?"))
D = int(input("qual a quantidade de derrotas?"))

-- ERROR:
File "XXXX", line 2
    V = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:32:01) 
-- CODE:
E = int(input("qual a quantidade de empates?")
V = int(input("qual a quantidade de vitorias?"))
D = int(input("qual a quantidade de derrotas?"))

-- ERROR:
File "XXXX", line 2
    V = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:32:10) 
-- CODE:
E = int(input("qual a quantidade de empates?"))
V = int(input("qual a quantidade de vitorias?"))
D = int(input("qual a quantidade de derrotas?"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    E = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
